# vaya

./: Cargo.toml
crates/vaya-api/: Cargo.toml
crates/vaya-api/src/: error.rs  lib.rs  middleware.rs  router.rs  types.rs
crates/vaya-api/src/handlers/: admin.rs  alert.rs  auth.rs  booking.rs  mod.rs  notification.rs  oracle.rs  payment.rs  pool.rs  search.rs  support.rs  traveler.rs  trip.rs  user.rs
crates/vaya-auth/: Cargo.toml
crates/vaya-auth/src/: error.rs  lib.rs  password.rs  permission.rs  session.rs  token.rs
crates/vaya-bin/: Cargo.toml
crates/vaya-bin/src/: app.rs  config.rs  main.rs  routes.rs
crates/vaya-bin/src/handlers/: alert.rs  auth.rs  booking.rs  health.rs  mod.rs  oracle.rs  pool.rs  search.rs  user.rs
crates/vaya-book/: Cargo.toml
crates/vaya-book/src/: booking.rs  error.rs  lib.rs  passenger.rs  payment.rs
crates/vaya-cache/: Cargo.toml
crates/vaya-cache/src/: lib.rs  lru.rs  shard.rs
crates/vaya-collect/: Cargo.toml
crates/vaya-collect/src/: client.rs  collector.rs  error.rs  lib.rs  request.rs  response.rs  retry.rs  url.rs
crates/vaya-common/: Cargo.toml
crates/vaya-common/src/: enums.rs  error.rs  lib.rs  types.rs
crates/vaya-common/src/codegen/: mod.rs
crates/vaya-core/: Cargo.toml
crates/vaya-core/src/: booking.rs  error.rs  lib.rs  search.rs  types.rs  user.rs
crates/vaya-crypto/: Cargo.toml
crates/vaya-crypto/src/: aead.rs  hash.rs  hmac.rs  jwt.rs  lib.rs  password.rs  random.rs
crates/vaya-db/: Cargo.toml
crates/vaya-db/src/: config.rs  engine.rs  error.rs  lib.rs  memtable.rs  sstable.rs  wal.rs
crates/vaya-fleet/: Cargo.toml
crates/vaya-fleet/src/: consensus.rs  error.rs  lib.rs  node.rs  scheduler.rs  service.rs
crates/vaya-forge/: Cargo.toml
crates/vaya-forge/src/: artifact.rs  build.rs  delta.rs  error.rs  lib.rs  registry.rs
crates/vaya-gds/: Cargo.toml
crates/vaya-gds/src/: cache.rs  error.rs  lib.rs  traits.rs  types.rs
crates/vaya-gds/src/amadeus/: auth.rs  client.rs  mod.rs  response.rs
crates/vaya-ml/: Cargo.toml
crates/vaya-ml/src/: activation.rs  layer.rs  lib.rs  lstm.rs  matrix.rs  network.rs  scaler.rs  tree.rs
crates/vaya-net/: Cargo.toml
crates/vaya-net/src/: error.rs  http.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  websocket.rs
crates/vaya-notification/: Cargo.toml
crates/vaya-notification/src/: email.rs  error.rs  lib.rs  sms.rs  templates.rs  types.rs
crates/vaya-oracle/: Cargo.toml
crates/vaya-oracle/src/: alert.rs  error.rs  lib.rs  lstm_predictor.rs  prediction.rs
crates/vaya-payment/: Cargo.toml
crates/vaya-payment/src/: error.rs  lib.rs  stripe.rs  types.rs  webhook.rs
crates/vaya-pool/: Cargo.toml
crates/vaya-pool/src/: error.rs  lib.rs  pool.rs  pricing.rs
crates/vaya-search/: Cargo.toml
crates/vaya-search/src/: engine.rs  error.rs  lib.rs  request.rs  types.rs
crates/vaya-store/: Cargo.toml
crates/vaya-store/src/: error.rs  index.rs  lib.rs  query.rs  schema.rs  table.rs
crates/vaya-ui/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
crates/vaya-ui/src/: generated_types.rs  lib.rs  types.rs
crates/vaya-ui/src/components/: airport_picker.rs  button.rs  checkbox.rs  countdown.rs  flight_card.rs  input.rs  mod.rs  oracle_verdict.rs  page_loading.rs  phone_input.rs  price_breakdown.rs  select_input.rs  text_input.rs
crates/vaya-ui/src/hooks/: api.rs  booking_state.rs  config.rs  mock_data.rs  mod.rs  validation.rs
crates/vaya-ui/src/screens/: home.rs  mod.rs  not_found.rs  oracle_loading.rs  oracle_result.rs
crates/vaya-ui/src/screens/booking/: contact.rs  contact_details.rs  extras.rs  extras_selection.rs  flight_selection.rs  mod.rs  order_review.rs  passenger_details.rs  passengers.rs  price_lock.rs  review.rs
crates/vaya-ui/src/screens/payment/: card_entry.rs  failure.rs  fpx_selection.rs  method_selection.rs  mod.rs  processing.rs  success.rs  three_ds.rs
crates/vaya-ui/src/tokens/: accessibility.rs  animations.rs  colors.rs  mod.rs  spacing.rs  typography.rs
crates/vaya-ui/styles/: main.css
docs/docs/: BUILD_INSTRUCTIONS.md  CLAUDE_CODE_INIT.md  CLAUDE_CODE_MASTER_PROMPT.md  CLAUDE_CODE_MASTER_PROMPT_v2.md  COMPLETENESS_AUDIT.md  KIASU_Commercial_Architecture.html  KNOWLEDGE_TRANSFER.md  NUCLEAR_ARCHITECTURE_V3.md  SCHEMA_DESIGN_OVERRIDE.md  SOVEREIGN_ARCHITECTURE.md  VAYAPAY_ASCII_DIAGRAM.txt  VAYAPAY_LEGAL_VERIFICATION_GUIDE.html  VAYAPAY_OPERATIONAL_ANSWERS.md  VAYAPAY_REVOLUTIONARY_SPECIFICATION.html  VAYA_ACCESSIBILITY_AUDIT.html  VAYA_ANIMATION_GUIDE.html  VAYA_API_SECURITY_ENHANCEMENTS.html  VAYA_API_SPEC_PART1.yaml  VAYA_API_SPEC_PART2.yaml  VAYA_API_SPEC_PART3.yaml  VAYA_API_SPEC_PART4.yaml  VAYA_Advertising_System.html  VAYA_Architecture_v1.html  VAYA_COMPONENT_LIBRARY.html  VAYA_Communications_System.html  VAYA_Component_Specification.html  VAYA_DATA_I18N_ML_SPECS.html  VAYA_Design_System_v2.html  VAYA_FINAL_100_PERCENT_AUDIT.html  VAYA_FORGE_FLEET.md  VAYA_INFRASTRUCTURE_NUCLEAR.html  VAYA_INTEGRATION_SPECIFICATION.html  VAYA_Implementation_Architecture.html  VAYA_LEGAL_DOCUMENTATION.html  VAYA_Logo_System.html  VAYA_ML_SPECIFICATION.html  VAYA_Master_Specification.html  VAYA_OPS_BIZ_LAUNCH.html  VAYA_PAYMENT_SPECIFICATION.html  VAYA_PRE_BUILD_REQUIREMENTS.html  (+15 more)
