[package]
name = "vaya-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "VAYA travel platform main binary"

[[bin]]
name = "vaya"
path = "src/main.rs"

[dependencies]
# Internal crates
vaya-common = { workspace = true }
vaya-crypto = { workspace = true }
vaya-db = { workspace = true }
vaya-cache = { workspace = true }
vaya-store = { workspace = true }
vaya-auth = { workspace = true }
vaya-ml = { workspace = true }
vaya-oracle = { workspace = true }
vaya-pool = { workspace = true }
vaya-book = { workspace = true }
vaya-search = { workspace = true }
vaya-collect = { workspace = true }
vaya-net = { workspace = true }
vaya-api = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
time = { workspace = true }

[dev-dependencies]
