[package]
name = "vaya-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Price predictions, alerts, and fare forecasting"

[dependencies]
vaya-common = { workspace = true }
vaya-ml = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
