[package]
name = "vaya-payment"
version = "0.1.0"
edition = "2021"
description = "Payment processing for VAYA (Stripe integration)"
authors = ["VAYA Team"]
license = "Proprietary"

[dependencies]
# Internal crates - using existing sovereign infrastructure
vaya-common = { path = "../vaya-common" }
vaya-cache = { path = "../vaya-cache" }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client (minimal, rustls only - no OpenSSL)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async trait support
async-trait = "0.1"

# UUID for payment IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tracing-subscriber = "0.3"
